<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >

        <customview.SelectableRoundedImageView
            android:id="@+id/imgPhoto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/share_article"
            android:adjustViewBounds="true"
            app:sriv_left_top_corner_radius="5dp"
            app:sriv_right_top_corner_radius="5dp"
            app:sriv_left_bottom_corner_radius="0dp"
            app:sriv_right_bottom_corner_radius="0dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:background="@drawable/share_bottom_bg"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:visibility="visible"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enjoying_our_app"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_friends_might_like_it_too"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txtShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/let_s_share"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="right"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>