<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/way"
        android:layout_width="match_parent"
        android:id="@+id/closeKeyBoard"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#64000000"
            tools:context="com.getitdonenow.activity.LoginActivity">

            <TextView
                android:gravity="center"
                android:padding="10dp"
                android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:text="Skip"
                android:textColor="@color/textlightblue" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                tools:context="com.getitdonenow.activity.LoginActivity">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/pdlogo"
                    android:contentDescription="@string/app_name"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp" />

                <TextView
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/sign_in_with" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/mediumSpace"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginRight="15dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_rectangle_fb"
                        android:id="@+id/ivFacebook"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:padding="9dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/fb" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:id="@+id/ivGmail"
                        android:background="@drawable/rounded_rectangle_gmail"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:padding="9dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/g_plus" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:background="@color/textlightblue"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1.25"/>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/smallSpace"
                        android:layout_weight="0.50"
                        android:gravity="center"
                        android:text="@string/or"
                        android:textColor="@color/white" />

                    <View
                        android:background="@color/textlightblue"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1.25"/>

                </LinearLayout>

                <!--android:drawableRight="@drawable/user"-->
                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_35dp"
                    android:layout_marginRight="@dimen/_35dp"
                    android:background="#0000"
                    android:singleLine="true"
                    android:textSize="14sp"
                    android:imeOptions="actionNext"
                    android:textColor="@color/textlightblue"
                    android:textColorHint="@color/textlightblue"
                    android:padding="12dp"
                    android:hint="@string/email" />

                <View
                    android:layout_width="match_parent"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_height="1dp"
                    android:background="@color/textlightblue" />

                <FrameLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="@dimen/_35dp"
                    android:layout_marginRight="@dimen/_35dp"   android:layout_height="wrap_content">

                    <EditText
                        android:inputType="textPassword"
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:imeOptions="actionDone"
                        android:background="#0000"
                        android:singleLine="true"
                        android:textColor="@color/textlightblue"
                        android:textColorHint="@color/textlightblue"
                        android:padding="12dp"
                        android:hint="@string/password" />

                    <ImageView
                        android:layout_margin="7dp"
                        android:padding="3dp"
                        android:id="@+id/switchPass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        app:srcCompat="@drawable/ic_no_encryption_black_24dp" />

                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_height="1dp"
                    android:background="@color/textlightblue" />

                <TextView
                    android:padding="5dp"
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_35dp"
                    android:layout_gravity="right"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    android:textSize="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/forgot_password"
                    />

                <TextView
                    android:id="@+id/btnLogin"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_35dp"
                    android:layout_marginRight="@dimen/_35dp"
                    android:background="@color/darkblue"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

                <TextView
                    android:gravity="center"
                    android:layout_alignParentBottom="true"
                    android:padding="10dp"
                    android:id="@+id/signUp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_horizontal"
                    android:text="Don't have an account? SIGNUP now" />

                <TextView
                    android:text="@string/privacy_policy_text"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:textSize="@dimen/smallText"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/privacy"
                    android:onClick="terms_n_codition"
                    android:textSize="@dimen/smallText"
                    android:layout_width="match_parent"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center|bottom"
                android:visibility="gone"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id"/>

        </RelativeLayout>

    </RelativeLayout>

</layout>