<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginRight="@dimen/_35dp"
    android:layout_marginEnd="@dimen/_35dp"
    android:layout_gravity="end"
    android:paddingTop="4dp">

    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="end"
        android:elevation="8dp"
        android:background="@drawable/rounded_corner_gray_border_white_rect"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="1dp"
            android:paddingTop="1dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="start|top"
                android:paddingBottom="1dp"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingTop="1dp"
                android:text="@string/edit"
                android:textColor="@color/black"
                android:textSize="13sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/half_black1"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/llDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="1dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="1dp"
            android:paddingTop="1dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="1dp"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingTop="1dp"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="1dp"
            android:paddingTop="1dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="1dp"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingTop="1dp"
                android:text="@string/report"
                android:textColor="@color/black"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
